# smart_pointer

./: .gitignore
c1_unique_pointer/: CMakeLists.txt  main.cpp  make_run.sh
c2_shared_pointer/: main.cpp  main1.cpp
c3_shared_pointer_func/: cat.cpp  cat.h  main.cpp  make_run.sh
